welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: type mismatch;
 found   : Int
 required: Boolean
	if (ado(a)){
                ^loneTeen:3: error: type mismatch;
 found   : Int
 required: Boolean
		if(ado(b)){
                       ^loneTeen:10: error: type mismatch;
 found   : Int
 required: Boolean
	if (ado(b)){
                ^loneTeen:11: error: type mismatch;
 found   : Int
 required: Boolean
		if(ado(a)){
                       ^loneTeen:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (ado(b)){
        ^loneTeen:21: error: type mismatch;
 found   : Int(13)
 required: Boolean
	if (c<13 && c>19){
              ^